--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
 	},
 	"dependencies": {
 		"@fortawesome/fontawesome-free": "^6.7.2",
+		"@reduxjs/toolkit": "^2.8.2",
 		"@tailwindcss/postcss": "^4.1.11",
 		"react": "^19.1.0",
 		"react-dom": "^19.1.0",
 		"react-image": "^4.1.0",
+		"react-redux": "^9.2.0",
 		"react-router-dom": "6.22.3",
 		"tailwindcss": "^4.1.11"
 	},
